Add unit test for memo service layer